# fedora-prime

./: Cargo.toml  LICENSE  README.md  config.example.toml  setup-intel.sh  setup-nvidia.sh
.rpm/: fedora-prime.spec
assets/: disable-gpu.sh  modprobe.conf  xorg.conf
src/: config.rs  errors.rs  main.rs  mode.rs  options.rs
