[package]
name = "fedora-prime"
description = "Switching between intel/nvidia drivers made simple"
license = "MIT"
version = "0.1.1"
authors = ["maciej"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
fedora-prime = { path = "/usr/bin/fedora-prime" }
